--- a/work1/index.html
+++ b/work1/index.html
@@ -1,7 +1,7 @@
 <html> 
 <body>
     <script>
-        alert('卢镇华的第一个网页程序')
+        alert('卢镇华的第一个网页程序h')
     </script>
     <a href="javascript:alert('Hello');" >test</a>          
 </body>
