--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
           <a href='work5/index.html'>work5 js循环语言程序</a><br>
               <a href='work6/index.html'>work6 阶乘法计算圆周率</a><br>
               <a href='work7/index.html'>work7 冒泡排序与插入排序</a><br>
+              <a href='work7slide/'>work7slide 冒泡排序与插入排序动画版</a><br>
               
           持续更新中。。。。
 
