--- a/work10/index.html
+++ b/work10/index.html
@@ -16,7 +16,11 @@
         <p><input type="button" value="统计" onclick="stat()"></p>
         <div id="result"></div>
     </div>
-   
+   <!-- <script>
+   let str = document.getElementById('str').value
+console.log(str.split(""))
+   </script> -->
 </body>
 <script src="index.js"></script>
+<script src="text.js"></script>
 </head>
