--- a/work10/index.html
+++ b/work10/index.html
@@ -4,7 +4,7 @@
 <head>
 <body>
     <div>
-        <p>猴子选大王</p>
+        <p>猴子选大王s</p>
         <p>请输入猴子的总数:<input id="monkeytotal" type="text" value="10"></p>
         <p>请输入踢出第几只猴子：<input id="monkeykick" type="text" value="7"> </p>
         <p><input type="button" value="选大王"  onclick="monkey()"></p>
