--- a/work10/index.html
+++ b/work10/index.html
@@ -6,7 +6,7 @@
     <div>
         <p>猴子选大王</p>
         <p>请输入猴子的总数:<input id="monkeytotal" type="text" value="10"></p>
-        <p>请输入踢出第几只猴子s：<input id="monkeykick" type="text" value="7"> </p>
+        <p>请输入踢出第几只猴子：<input id="monkeykick" type="text" value="7"> </p>
         <p><input type="button" value="选大王"  onclick="monkey()"></p>
         <div id="monkeyking"></div>
     </div>
@@ -24,3 +24,4 @@ console.log(str.split(""))
 <script src="index.js"></script>
 <script src="text.js"></script>
 </head>
+
