--- a/index.html
+++ b/index.html
@@ -1,31 +1,42 @@
 <!DOCTYPE html>
 <html>
+
      <head>
           <meta charset="utf-8">
           <title>卢镇华的《javascript web前端开发》课程作业</title>
+          <style>
+          
+          
+          </style>
     </head>
     <boby>
+       <div style="text-align:center;">  
+                  <div style="background:url(small.jpg) no-repeat left top;">   
           <p>卢镇华的《javascript web前端开发》课程作业</p>
-          <a href='work1/index.html'>work1 开发环境安装</a><br>
-          <a href='work2/index.html'>work2 简单网页任务</a><br>
-          <a href='work2-1/index.html'>work2 简单网页任务</a><br>
-          <a href='work3/index.html'>work3 js基本语法</a><br>
+          <a href='work1/index.html' onMouseOver="document.bgColor='#ffff99'">work1 开发环境安装</a><br>
+          <a href='work2/index.html' >work2 简单网页任务</a><br>
+          <a href='work3/index.html' >work3 js基本语法</a><br>
           <a href='work4/index.html'>work4 js流程控制</a><br>
           <a href='work5/index.html'>work5 js循环语言程序</a><br>
-              <a href='work6/index.html'>work6 阶乘法计算圆周率</a><br>
-              <a href='work7/index.html'>work7 冒泡排序与插入排序</a><br>
-              <a href='work7slide/index.html'>work7slide 冒泡排序与插入排序动画版</a><br>
-              <a href='work8/index.html'>work8 简易计算器</a><br>
-              <a href='work9/index.html'>work9 三级联动</a><br>
-              <a href='work10/index.html'>work10</a><br>
+              <a href='work6/index.html' >work6 阶乘法计算圆周率</a><br>
+              <a href='work7/index.html' >work7 冒泡排序与插入排序</a><br>
+              <a href='work7slide/index.html' >work7slide 冒泡排序与插入排序动画版</a><br>
+              <a href='work8/index.html' >work8 简易计算器</a><br>
+              <a href='work9/index.html' >work9 三级联动</a><br>
+              <a href='work10/index.html' >work10</a><br>
               <a href='work12/index.html'>work12万年历</a><br>
               <a href='work12-1/index1.html'>work12万年历挑战任务</a><br>
-              <a href='work13/index.html'>work13表单生成器</a><br>
-              <a href='work14/index.html'>work14限时秒杀</a><br>
-              <a href='work14/index1.html'>work14-1红绿灯</a><br>
+              <a href='work13/index.html' >work13表单生成器</a><br>
+              <a href='work14/index.html' >work14限时秒杀</a><br>
+              <a href='work14/index1.html' >work14-1红绿灯</a><br>
+              <a href='work15/index.html' >work15购物车</a><br>
+              <a href='work16/index.html' >work16放大镜</a><br>
+              <a href='work16/index1.html' >work16小球快跑</a><br>
+            </div>
+            </div>
           持续更新中。。。。.
 
-
+<script src="index.js"></script>
     </boby>
      </head>
 <!-- Set-ExecutionPolicy -Scope CurrentUser -->
