--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
      <head>
           <meta charset="utf-8">
-          <title>卢镇华的《javascript web前端开发》课程作业</title>
+          <title>💗卢镇华的《javascript web前端开发》课程作业💗</title>
           <style>
           
           
@@ -12,7 +12,7 @@
     <boby>
        <div style="text-align:center;">  
                   <div style="background:url(small.jpg) no-repeat left top;">   
-          <p>卢镇华的《javascript web前端开发》课程作业</p>
+          <h2><h2>💗卢镇华的《javascript web前端开发》课程作业💗</h2></p>
           <a href='work1/index.html' onMouseOver="document.bgColor='#ffff99'">work1 开发环境安装</a><br>
           <a href='work2/index.html' >work2 简单网页任务</a><br>
           <a href='work3/index.html' >work3 js基本语法</a><br>
@@ -32,6 +32,7 @@
               <a href='work15/index.html' >work15购物车</a><br>
               <a href='work16/index.html' >work16放大镜</a><br>
               <a href='work16/index1.html' >work16小球快跑</a><br>
+              <a href='work17/index.html' >work17表单验证</a><br>
             </div>
             </div>
           持续更新中。。。。.
