--- a/index.html
+++ b/index.html
@@ -4,7 +4,11 @@
      <head>
           <meta charset="utf-8">
           <title>💗卢镇华的《javascript web前端开发》课程作业💗</title>
-          <style>
+          <style type="text/css"> 
+          body{
+               background-color:#ffff99 ;
+
+     }
           
           
           </style>
@@ -13,6 +17,7 @@
        <div style="text-align:center;">  
                   <div style="background:url(small.jpg) no-repeat left top;">   
           <h2><h2>💗卢镇华的《javascript web前端开发》课程作业💗</h2></p>
+          <HR style="FILTER: alpha(opacity=100,finishopacity=0,style=3)" width="90%" color=#2F4F4F SIZE=3>
           <a href='work1/index.html' onMouseOver="document.bgColor='#ffff99'">work1 开发环境安装</a><br>
           <a href='work2/index.html' >work2 简单网页任务</a><br>
           <a href='work3/index.html' >work3 js基本语法</a><br>
@@ -32,10 +37,14 @@
               <a href='work15/index.html' >work15购物车</a><br>
               <a href='work16/index.html' >work16放大镜</a><br>
               <a href='work16/index1.html' >work16小球快跑</a><br>
-              <a href='work17/index.html' >work17表单验证</a><br>
+              <a href='work17/index.html' >work17表单验证 </a><br>
+              <a href='work18/index.html' >work18ajax无刷新提交评论 </a><br>
+              <a href='work18/index1.html' >work18-1ajax无刷新分页查看评论 </a><br>
+              <a href='work19/index.html' >work19WebSocket聊天室 </a><br>
+              <a href='work19/index1.html' > work19-1进度条文件上传</a><br>
             </div>
             </div>
-          持续更新中。。。。.
+          持续更新中。。。。。。。。
 
 <script src="index.js"></script>
     </boby>
