--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
               <a href='work19/index1.html' > work19-1进度条文件上传</a><br>
             </div>
             </div>
-          持续更新中。。。。。。。。
+          持续更新中。。。。。
 
 <script src="index.js"></script>
     </boby>
