--- a/work19/index.html
+++ b/work19/index.html
@@ -9,12 +9,12 @@
 
 <body>
     服务器:<input type="text" id="server" value="ws://139.9.81.203:8081"><br>
-    昵称:<input type="text" id="nickname" value="小w">
+    昵称:<input type="text" id="nickname" value="卢镇华">
     <button onclick="connect()" id="conn">连接</button>
     <button onclick="disconnect()" id="disconn">断开</button><br>
     发言:<input size="40" id="content"><button onclick="send()">发送</button>
     <div class="scrollbox" id="board">
-        <div>a</div>
+        <div>嘻嘻</div>
     </div>
 </body>
 <script src="index.js"></script>
