--- a/index.html
+++ b/index.html
@@ -44,13 +44,13 @@
               <a href='work19/index1.html' > work19-1进度条文件上传</a><br>
               <a href="work20/index.html">work20 折叠菜单</a><br>
               <a href="work20-1/index.html">work20-1 选项移动</a><br>
-              <a href="work21/index.html">work20-1 无缝轮播图</a><br>    
-              <a href="work21/index1.html">work20-1 Ajax无刷新提交</a><br>    
+              <a href="work21/index.html">work21 无缝轮播图</a><br>    
+              <a href="work21/index1.html">work21-1 Ajax无刷新提交</a><br>    
           
 
             </div>
             </div>
-          持续更新中。。。。。
+          持续更新中。。。。。..
           
 
 <script src="index.js"></script>
