--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 
             </div>
             </div>
-          持续更新中。。。。。..
+          持续更新中。。。。。
           
 
 <script src="index.js"></script>
