--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
               <a href="work20/index1.html">work20-1 选项移动</a><br>
               <a href="work21/index.html">work21 无缝轮播图</a><br>    
               <a href="work21/index1.html">work21-1 Ajax无刷新提交</a><br>    
-          
+              <a href="work22/index.html">work22 扫雷游戏</a><br>  
 
             </div>
             </div>
